exports[`no-array-reduce > invalid(1): array.reduce((a, b) => a + b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduce((a, b) => a + b)

`;

exports[`no-array-reduce > invalid(1): array.reduce((a, b) => a + b) 2`] = `

Message:
> 1 | array.reduce((a, b) => a + b)
    |       ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Suggestion 1/1: Switch to \`Math.sumPrecise()\`.:
  1 | Math.sumPrecise(array)

`;

exports[`no-array-reduce > invalid(10): object.values.reduce((a, b) => a + b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | object.values.reduce((a, b) => a + b)

`;

exports[`no-array-reduce > invalid(10): object.values.reduce((a, b) => a + b) 2`] = `

Message:
> 1 | object.values.reduce((a, b) => a + b)
    |               ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Suggestion 1/1: Switch to \`Math.sumPrecise()\`.:
  1 | Math.sumPrecise(object.values)

`;

exports[`no-array-reduce > invalid(11): object[\"values\"].reduce((a, b) => a + b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | object["values"].reduce((a, b) => a + b)

`;

exports[`no-array-reduce > invalid(11): object[\"values\"].reduce((a, b) => a + b) 2`] = `

Message:
> 1 | object["values"].reduce((a, b) => a + b)
    |                  ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Suggestion 1/1: Switch to \`Math.sumPrecise()\`.:
  1 | Math.sumPrecise(object["values"])

`;

exports[`no-array-reduce > invalid(12): getNumbers().reduce((a, b) => a + b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | getNumbers().reduce((a, b) => a + b)

`;

exports[`no-array-reduce > invalid(12): getNumbers().reduce((a, b) => a + b) 2`] = `

Message:
> 1 | getNumbers().reduce((a, b) => a + b)
    |              ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Suggestion 1/1: Switch to \`Math.sumPrecise()\`.:
  1 | Math.sumPrecise(getNumbers())

`;

exports[`no-array-reduce > invalid(13): foo(array.reduce((a, b) => a + b)) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | foo(array.reduce((a, b) => a + b))

`;

exports[`no-array-reduce > invalid(13): foo(array.reduce((a, b) => a + b)) 2`] = `

Message:
> 1 | foo(array.reduce((a, b) => a + b))
    |           ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Suggestion 1/1: Switch to \`Math.sumPrecise()\`.:
  1 | foo(Math.sumPrecise(array))

`;

exports[`no-array-reduce > invalid(14): const array = []; const sum = array.reduce((a, b) => a + b); 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | const array = []; const sum = array.reduce((a, b) => a + b);

`;

exports[`no-array-reduce > invalid(14): const array = []; const sum = array.reduce((a, b) => a + b); 2`] = `

Message:
> 1 | const array = []; const sum = array.reduce((a, b) => a + b);
    |                                     ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Suggestion 1/1: Switch to \`Math.sumPrecise()\`.:
  1 | const array = []; const sum = Math.sumPrecise(array);

`;

exports[`no-array-reduce > invalid(15): array.reduce((a, b) => a + b.length) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduce((a, b) => a + b.length)

`;

exports[`no-array-reduce > invalid(15): array.reduce((a, b) => a + b.length) 2`] = `

Message:
> 1 | array.reduce((a, b) => a + b.length)
    |       ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(16): array.reduce((a, b) => a + b, 10) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduce((a, b) => a + b, 10)

`;

exports[`no-array-reduce > invalid(16): array.reduce((a, b) => a + b, 10) 2`] = `

Message:
> 1 | array.reduce((a, b) => a + b, 10)
    |       ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(17): array.reduce((a, b) => a - b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduce((a, b) => a - b)

`;

exports[`no-array-reduce > invalid(17): array.reduce((a, b) => a - b) 2`] = `

Message:
> 1 | array.reduce((a, b) => a - b)
    |       ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(18): array.reduce((a, b) => a * b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduce((a, b) => a * b)

`;

exports[`no-array-reduce > invalid(18): array.reduce((a, b) => a * b) 2`] = `

Message:
> 1 | array.reduce((a, b) => a * b)
    |       ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(19): array.reduce((a, b) => a + a) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduce((a, b) => a + a)

`;

exports[`no-array-reduce > invalid(19): array.reduce((a, b) => a + a) 2`] = `

Message:
> 1 | array.reduce((a, b) => a + a)
    |       ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(2): array.reduce((total, item) => total + item, 0) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduce((total, item) => total + item, 0)

`;

exports[`no-array-reduce > invalid(2): array.reduce((total, item) => total + item, 0) 2`] = `

Message:
> 1 | array.reduce((total, item) => total + item, 0)
    |       ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Suggestion 1/1: Switch to \`Math.sumPrecise()\`.:
  1 | Math.sumPrecise(array)

`;

exports[`no-array-reduce > invalid(20): array.reduce((a, b, c) => a + b + c) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduce((a, b, c) => a + b + c)

`;

exports[`no-array-reduce > invalid(20): array.reduce((a, b, c) => a + b + c) 2`] = `

Message:
> 1 | array.reduce((a, b, c) => a + b + c)
    |       ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(21): array?.reduce((a, b) => a + b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array?.reduce((a, b) => a + b)

`;

exports[`no-array-reduce > invalid(21): array?.reduce((a, b) => a + b) 2`] = `

Message:
> 1 | array?.reduce((a, b) => a + b)
    |        ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(22): array.reduce((a, b) => /* keep */ a + b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduce((a, b) => /* keep */ a + b)

`;

exports[`no-array-reduce > invalid(22): array.reduce((a, b) => /* keep */ a + b) 2`] = `

Message:
> 1 | array.reduce((a, b) => /* keep */ a + b)
    |       ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(23): array.reduce(([a], b) => a + b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduce(([a], b) => a + b)

`;

exports[`no-array-reduce > invalid(23): array.reduce(([a], b) => a + b) 2`] = `

Message:
> 1 | array.reduce(([a], b) => a + b)
    |       ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(24): array.reduce((a: number, b: number) => a + b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduce((a: number, b: number) => a + b)

`;

exports[`no-array-reduce > invalid(24): array.reduce((a: number, b: number) => a + b) 2`] = `

Message:
> 1 | array.reduce((a: number, b: number) => a + b)
    |       ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Suggestion 1/1: Switch to \`Math.sumPrecise()\`.:
  1 | Math.sumPrecise(array)

`;

exports[`no-array-reduce > invalid(25): array.reduce((a, b: number) => a + b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduce((a, b: number) => a + b)

`;

exports[`no-array-reduce > invalid(25): array.reduce((a, b: number) => a + b) 2`] = `

Message:
> 1 | array.reduce((a, b: number) => a + b)
    |       ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Suggestion 1/1: Switch to \`Math.sumPrecise()\`.:
  1 | Math.sumPrecise(array)

`;

exports[`no-array-reduce > invalid(26): array.reduce<number>((a, b) => a + b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduce<number>((a, b) => a + b)

`;

exports[`no-array-reduce > invalid(26): array.reduce<number>((a, b) => a + b) 2`] = `

Message:
> 1 | array.reduce<number>((a, b) => a + b)
    |       ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Suggestion 1/1: Switch to \`Math.sumPrecise()\`.:
  1 | Math.sumPrecise(array)

`;

exports[`no-array-reduce > invalid(27): array.reduce((a, b: string) => a + b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduce((a, b: string) => a + b)

`;

exports[`no-array-reduce > invalid(27): array.reduce((a, b: string) => a + b) 2`] = `

Message:
> 1 | array.reduce((a, b: string) => a + b)
    |       ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(28): array.reduce((a: string, b) => a + b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduce((a: string, b) => a + b)

`;

exports[`no-array-reduce > invalid(28): array.reduce((a: string, b) => a + b) 2`] = `

Message:
> 1 | array.reduce((a: string, b) => a + b)
    |       ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(29): array.reduce((a: bigint, b: bigint) => a + b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduce((a: bigint, b: bigint) => a + b)

`;

exports[`no-array-reduce > invalid(29): array.reduce((a: bigint, b: bigint) => a + b) 2`] = `

Message:
> 1 | array.reduce((a: bigint, b: bigint) => a + b)
    |       ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(3): array.reduceRight((a, b) => a + b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduceRight((a, b) => a + b)

`;

exports[`no-array-reduce > invalid(3): array.reduceRight((a, b) => a + b) 2`] = `

Message:
> 1 | array.reduceRight((a, b) => a + b)
    |       ^^^^^^^^^^^ \`Array#reduceRight()\` is not allowed. Prefer other types of loop for readability. You may want to call \`Array#toReversed()\` before looping it.

Suggestion 1/1: Switch to \`Math.sumPrecise()\`.:
  1 | Math.sumPrecise(array)

`;

exports[`no-array-reduce > invalid(30): function sum(values: number[]) { return values.reduce((a, b) => a + b); } 1`] = `

Filename: file.ts

Options:
- allowSimpleOperations: false

Code:
  1 | function sum(values: number[]) { return values.reduce((a, b) => a + b); }

`;

exports[`no-array-reduce > invalid(30): function sum(values: number[]) { return values.reduce((a, b) => a + b); } 2`] = `

Message:
> 1 | function sum(values: number[]) { return values.reduce((a, b) => a + b); }
    |                                                ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Suggestion 1/1: Switch to \`Math.sumPrecise()\`.:
  1 | function sum(values: number[]) { return Math.sumPrecise(values); }

`;

exports[`no-array-reduce > invalid(31): function sum(values: readonly number[]) { return values.reduce((a, b) => a + b); } 1`] = `

Filename: file.ts

Options:
- allowSimpleOperations: false

Code:
  1 | function sum(values: readonly number[]) { return values.reduce((a, b) => a + b); }

`;

exports[`no-array-reduce > invalid(31): function sum(values: readonly number[]) { return values.reduce((a, b) => a + b); } 2`] = `

Message:
> 1 | function sum(values: readonly number[]) { return values.reduce((a, b) => a + b); }
    |                                                         ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Suggestion 1/1: Switch to \`Math.sumPrecise()\`.:
  1 | function sum(values: readonly number[]) { return Math.sumPrecise(values); }

`;

exports[`no-array-reduce > invalid(32): function sum(values: number[]) { return values.reduce((a, b, index, all) => a + b); } 1`] = `

Filename: file.ts

Options:
- allowSimpleOperations: false

Code:
  1 | function sum(values: number[]) { return values.reduce((a, b, index, all) => a + b); }

`;

exports[`no-array-reduce > invalid(32): function sum(values: number[]) { return values.reduce((a, b, index, all) => a + b); } 2`] = `

Message:
> 1 | function sum(values: number[]) { return values.reduce((a, b, index, all) => a + b); }
    |                                                ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Suggestion 1/1: Switch to \`Math.sumPrecise()\`.:
  1 | function sum(values: number[]) { return Math.sumPrecise(values); }

`;

exports[`no-array-reduce > invalid(33): function concat(values: string[]) { return values.reduce((a, b) => a + b); } 1`] = `

Filename: file.ts

Options:
- allowSimpleOperations: false

Code:
  1 | function concat(values: string[]) { return values.reduce((a, b) => a + b); }

`;

exports[`no-array-reduce > invalid(33): function concat(values: string[]) { return values.reduce((a, b) => a + b); } 2`] = `

Message:
> 1 | function concat(values: string[]) { return values.reduce((a, b) => a + b); }
    |                                                   ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(34): function sum(values: boolean[]) { return values.reduce((a, b) => a + b); } 1`] = `

Filename: file.ts

Options:
- allowSimpleOperations: false

Code:
  1 | function sum(values: boolean[]) { return values.reduce((a, b) => a + b); }

`;

exports[`no-array-reduce > invalid(34): function sum(values: boolean[]) { return values.reduce((a, b) => a + b); } 2`] = `

Message:
> 1 | function sum(values: boolean[]) { return values.reduce((a, b) => a + b); }
    |                                                 ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(35): function sum(values: bigint[]) { return values.reduce((a, b) => a + b); } 1`] = `

Filename: file.ts

Options:
- allowSimpleOperations: false

Code:
  1 | function sum(values: bigint[]) { return values.reduce((a, b) => a + b); }

`;

exports[`no-array-reduce > invalid(35): function sum(values: bigint[]) { return values.reduce((a, b) => a + b); } 2`] = `

Message:
> 1 | function sum(values: bigint[]) { return values.reduce((a, b) => a + b); }
    |                                                ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(36): new BigInt64Array().reduce((a, b) => a + b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | new BigInt64Array().reduce((a, b) => a + b)

`;

exports[`no-array-reduce > invalid(36): new BigInt64Array().reduce((a, b) => a + b) 2`] = `

Message:
> 1 | new BigInt64Array().reduce((a, b) => a + b)
    |                     ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(37): new BigUint64Array().reduce((a, b) => a + b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | new BigUint64Array().reduce((a, b) => a + b)

`;

exports[`no-array-reduce > invalid(37): new BigUint64Array().reduce((a, b) => a + b) 2`] = `

Message:
> 1 | new BigUint64Array().reduce((a, b) => a + b)
    |                      ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(38): BigInt64Array.from([]).reduce((a, b) => a + b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | BigInt64Array.from([]).reduce((a, b) => a + b)

`;

exports[`no-array-reduce > invalid(38): BigInt64Array.from([]).reduce((a, b) => a + b) 2`] = `

Message:
> 1 | BigInt64Array.from([]).reduce((a, b) => a + b)
    |                        ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(39): BigUint64Array.of(1n).reduce((a, b) => a + b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | BigUint64Array.of(1n).reduce((a, b) => a + b)

`;

exports[`no-array-reduce > invalid(39): BigUint64Array.of(1n).reduce((a, b) => a + b) 2`] = `

Message:
> 1 | BigUint64Array.of(1n).reduce((a, b) => a + b)
    |                       ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(4): array.reduceRight((a, b) => a + b, 0) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduceRight((a, b) => a + b, 0)

`;

exports[`no-array-reduce > invalid(4): array.reduceRight((a, b) => a + b, 0) 2`] = `

Message:
> 1 | array.reduceRight((a, b) => a + b, 0)
    |       ^^^^^^^^^^^ \`Array#reduceRight()\` is not allowed. Prefer other types of loop for readability. You may want to call \`Array#toReversed()\` before looping it.

Suggestion 1/1: Switch to \`Math.sumPrecise()\`.:
  1 | Math.sumPrecise(array)

`;

exports[`no-array-reduce > invalid(40): function sum(values: BigInt64Array | Int8Array) { return values.reduce((a, b) => a + b); } 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | function sum(values: BigInt64Array | Int8Array) { return values.reduce((a, b) => a + b); }

`;

exports[`no-array-reduce > invalid(40): function sum(values: BigInt64Array | Int8Array) { return values.reduce((a, b) => a + b); } 2`] = `

Message:
> 1 | function sum(values: BigInt64Array | Int8Array) { return values.reduce((a, b) => a + b); }
    |                                                                 ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(41): const array = [1]; const result = array.reduce(() => compute(), 0); 1`] = `

  1 | const array = [1]; const result = array.reduce(() => compute(), 0);

`;

exports[`no-array-reduce > invalid(41): const array = [1]; const result = array.reduce(() => compute(), 0); 2`] = `

Message:
> 1 | const array = [1]; const result = array.reduce(() => compute(), 0);
    |                                         ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Output:
  1 | const array = [1]; let result = 0;
  2 |
  3 | for (const [index, element] of array.entries()) {
  4 | 	if (!(index in array)) {
  5 | 		continue;
  6 | 	}
  7 |
  8 | 	result = compute();
  9 | }

`;

exports[`no-array-reduce > invalid(42): const array = [1]; const result = array.reduce((accumulator, element) => element[accumulator], 0); 1`] = `

  1 | const array = [1]; const result = array.reduce((accumulator, element) => element[accumulator], 0);

`;

exports[`no-array-reduce > invalid(42): const array = [1]; const result = array.reduce((accumulator, element) => element[accumulator], 0); 2`] = `

Message:
> 1 | const array = [1]; const result = array.reduce((accumulator, element) => element[accumulator], 0);
    |                                         ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Output:
  1 | const array = [1]; let result = 0;
  2 |
  3 | for (const [index, element] of array.entries()) {
  4 | 	if (!(index in array)) {
  5 | 		continue;
  6 | 	}
  7 |
  8 | 	result = element[result];
  9 | }

`;

exports[`no-array-reduce > invalid(43): const array = [1]; const result = array.reduce((accumulator, element) => ({key: accumulator, element}), {}); 1`] = `

  1 | const array = [1]; const result = array.reduce((accumulator, element) => ({key: accumulator, element}), {});

`;

exports[`no-array-reduce > invalid(43): const array = [1]; const result = array.reduce((accumulator, element) => ({key: accumulator, element}), {}); 2`] = `

Message:
> 1 | const array = [1]; const result = array.reduce((accumulator, element) => ({key: accumulator, element}), {});
    |                                         ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Output:
  1 | const array = [1]; let result = {};
  2 |
  3 | for (const [index, element] of array.entries()) {
  4 | 	if (!(index in array)) {
  5 | 		continue;
  6 | 	}
  7 |
  8 | 	result = {key: result, element};
  9 | }

`;

exports[`no-array-reduce > invalid(44): const array = [1]; const result = array.reduce((a, b) => Math.max(a, b), 0);; 1`] = `

  1 | const array = [1]; const result = array.reduce((a, b) => Math.max(a, b), 0);;

`;

exports[`no-array-reduce > invalid(44): const array = [1]; const result = array.reduce((a, b) => Math.max(a, b), 0);; 2`] = `

Message:
> 1 | const array = [1]; const result = array.reduce((a, b) => Math.max(a, b), 0);;
    |                                         ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Output:
  1 | const array = [1]; let result = 0;
  2 |
  3 | for (const [index, b] of array.entries()) {
  4 | 	if (!(index in array)) {
  5 | 		continue;
  6 | 	}
  7 |
  8 | 	result = Math.max(result, b);
  9 | }

`;

exports[`no-array-reduce > invalid(45): const array = [1]; const result = array.reduce((accumulator, element) => ({get value() { return accumulator; }}), {}); 1`] = `

  1 | const array = [1]; const result = array.reduce((accumulator, element) => ({get value() { return accumulator; }}), {});

`;

exports[`no-array-reduce > invalid(45): const array = [1]; const result = array.reduce((accumulator, element) => ({get value() { return accumulator; }}), {}); 2`] = `

Message:
> 1 | const array = [1]; const result = array.reduce((accumulator, element) => ({get value() { return accumulator; }}), {});
    |                                         ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(46): const array = [1]; const result = array.reduce((accumulator, element) => ({accumulator, element}), {}); 1`] = `

  1 | const array = [1]; const result = array.reduce((accumulator, element) => ({accumulator, element}), {});

`;

exports[`no-array-reduce > invalid(46): const array = [1]; const result = array.reduce((accumulator, element) => ({accumulator, element}), {}); 2`] = `

Message:
> 1 | const array = [1]; const result = array.reduce((accumulator, element) => ({accumulator, element}), {});
    |                                         ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(47): const array = [1]; const result = array.reduce((accumulator, element = accumulator) => [() => accumulator], array); 1`] = `

  1 | const array = [1]; const result = array.reduce((accumulator, element = accumulator) => [() => accumulator], array);

`;

exports[`no-array-reduce > invalid(47): const array = [1]; const result = array.reduce((accumulator, element = accumulator) => [() => accumulator], array); 2`] = `

Message:
> 1 | const array = [1]; const result = array.reduce((accumulator, element = accumulator) => [() => accumulator], array);
    |                                         ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(48): const array = [1]; const result = array.reduce(async (a, b) => Math.max(a, b), 0); 1`] = `

  1 | const array = [1]; const result = array.reduce(async (a, b) => Math.max(a, b), 0);

`;

exports[`no-array-reduce > invalid(48): const array = [1]; const result = array.reduce(async (a, b) => Math.max(a, b), 0); 2`] = `

Message:
> 1 | const array = [1]; const result = array.reduce(async (a, b) => Math.max(a, b), 0);
    |                                         ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(49): const array = [1]; const result = array.reduce((a, b) => Math.max(a, compute(() => b)), 0); 1`] = `

  1 | const array = [1]; const result = array.reduce((a, b) => Math.max(a, compute(() => b)), 0);

`;

exports[`no-array-reduce > invalid(49): const array = [1]; const result = array.reduce((a, b) => Math.max(a, compute(() => b)), 0); 2`] = `

Message:
> 1 | const array = [1]; const result = array.reduce((a, b) => Math.max(a, compute(() => b)), 0);
    |                                         ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(5): array.reduce((a, b) => b + a) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduce((a, b) => b + a)

`;

exports[`no-array-reduce > invalid(5): array.reduce((a, b) => b + a) 2`] = `

Message:
> 1 | array.reduce((a, b) => b + a)
    |       ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Suggestion 1/1: Switch to \`Math.sumPrecise()\`.:
  1 | Math.sumPrecise(array)

`;

exports[`no-array-reduce > invalid(50): const array = [1]; const result = array.reduce((a, b) => a.concat(b), []); 1`] = `

  1 | const array = [1]; const result = array.reduce((a, b) => a.concat(b), []);

`;

exports[`no-array-reduce > invalid(50): const array = [1]; const result = array.reduce((a, b) => a.concat(b), []); 2`] = `

Message:
> 1 | const array = [1]; const result = array.reduce((a, b) => a.concat(b), []);
    |                                         ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(51): const array = [1]; const callback = (total, item, index, list) => Math.max(total, list.length); const result = array.reduce(callback, 0); 1`] = `

  1 | const array = [1]; const callback = (total, item, index, list) => Math.max(total, list.length); const result = array.reduce(callback, 0);

`;

exports[`no-array-reduce > invalid(51): const array = [1]; const callback = (total, item, index, list) => Math.max(total, list.length); const result = array.reduce(callback, 0); 2`] = `

Message:
> 1 | const array = [1]; const callback = (total, item, index, list) => Math.max(total, list.length); const result = array.reduce(callback, 0);
    |                                                                                                                      ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(52): const array = [1]; const result = array.reduce((a, b) => Math.max(a, array = b), 0); 1`] = `

  1 | const array = [1]; const result = array.reduce((a, b) => Math.max(a, array = b), 0);

`;

exports[`no-array-reduce > invalid(52): const array = [1]; const result = array.reduce((a, b) => Math.max(a, array = b), 0); 2`] = `

Message:
> 1 | const array = [1]; const result = array.reduce((a, b) => Math.max(a, array = b), 0);
    |                                         ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

`;

exports[`no-array-reduce > invalid(6): array.reduce((a, b) => { return a + b; }) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduce((a, b) => { return a + b; })

`;

exports[`no-array-reduce > invalid(6): array.reduce((a, b) => { return a + b; }) 2`] = `

Message:
> 1 | array.reduce((a, b) => { return a + b; })
    |       ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Suggestion 1/1: Switch to \`Math.sumPrecise()\`.:
  1 | Math.sumPrecise(array)

`;

exports[`no-array-reduce > invalid(7): array.reduce(function (a, b) { return a + b; }) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduce(function (a, b) { return a + b; })

`;

exports[`no-array-reduce > invalid(7): array.reduce(function (a, b) { return a + b; }) 2`] = `

Message:
> 1 | array.reduce(function (a, b) { return a + b; })
    |       ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Suggestion 1/1: Switch to \`Math.sumPrecise()\`.:
  1 | Math.sumPrecise(array)

`;

exports[`no-array-reduce > invalid(8): array.reduce((a, b, index) => a + b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | array.reduce((a, b, index) => a + b)

`;

exports[`no-array-reduce > invalid(8): array.reduce((a, b, index) => a + b) 2`] = `

Message:
> 1 | array.reduce((a, b, index) => a + b)
    |       ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Suggestion 1/1: Switch to \`Math.sumPrecise()\`.:
  1 | Math.sumPrecise(array)

`;

exports[`no-array-reduce > invalid(9): (0, array).reduce((a, b) => a + b) 1`] = `

Options:
- allowSimpleOperations: false

Code:
  1 | (0, array).reduce((a, b) => a + b)

`;

exports[`no-array-reduce > invalid(9): (0, array).reduce((a, b) => a + b) 2`] = `

Message:
> 1 | (0, array).reduce((a, b) => a + b)
    |            ^^^^^^ \`Array#reduce()\` is not allowed. Prefer other types of loop for readability.

Suggestion 1/1: Switch to \`Math.sumPrecise()\`.:
  1 | Math.sumPrecise((0, array))

`;
